# epower_v

./: Cargo.toml  EPOWER_V.xml  LICENSE  README.md  debug.gdb  memory.x
.cargo/: config
src/: adc.rs  clock.rs  dbg.rs  disp.rs  iic.rs  main.rs  settings.rs  setup.rs  timer.rs  uart0.rs  vrm.rs
src/rom/: eeprom.rs  i2c.rs  mod.rs  uart.rs
