[package]
name = "epower_v"
version = "1.0.0"
authors = ["juvgrfunex <fstockem+github@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
lpc11u6x_pac = {git = "https://github.com/juvgrfunex/lpc11u6x_pac.git" , features=["rt"]}
crc = "3.0.0"
